feat: adiciona controller de configurações
